Prevent images from stretching

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -34,6 +34,7 @@ pre {
 
 img {
     max-width: 100%;
+    object-fit: contain;
 }
 
 input {
